Fix a deadlock when cancelling save dialog for a PSD file

BUG:451175